# Stegozaur

./: .gitignore  CMakeLists.txt  LICENSE  README.md  met.py
include/: algorithm.hpp  audio.hpp  image.hpp  lsb_algorithm.hpp  lsb_matching_algorithm.hpp  pvd_algorithm.hpp  stegozaur.hpp
src/: audio.cpp  batch_embed.py  dr_wav_impl.cpp  hybrid.py  image.cpp  lsb_algorithm.cpp  lsb_matching_algorithm.cpp  main.cpp  pvd_algorithm.cpp  stb_image_impl.cpp  stegozaur.cpp
